feat(Blog): 文章內頁的navigation 新增 blog 連結

--- a/src/pages/[...blog]/index.astro
+++ b/src/pages/[...blog]/index.astro
@@ -52,6 +52,7 @@ const metadata = merge(
     <Header
       position="left"
       links={[
+        { text: 'Blog', href: '/blog' },
         { text: 'Category', href: '#' },
         { text: 'Archive', href: '#' },
         { text: 'About', href: '/about' },
