feat(Blog): update navigation links from 'Archive' to 'Tag'

--- a/src/pages/[...blog]/[...page].astro
+++ b/src/pages/[...blog]/[...page].astro
@@ -39,7 +39,7 @@ const metadata = {
       position="left"
       links={[
         { text: 'Category', href: '#' },
-        { text: 'Archive', href: '#' },
+        { text: 'Tag', href: '#' },
         { text: 'About', href: '/about' },
       ]}
       isSticky
