--- a/src/pages/[...blog]/index.astro
+++ b/src/pages/[...blog]/index.astro
@@ -54,7 +54,7 @@ const metadata = merge(
       links={[
         { text: 'Blog', href: '/blog' },
         { text: 'Category', href: '#' },
-        { text: 'Archive', href: '#' },
+        { text: 'Tag', href: '#' },
         { text: 'About', href: '/about' },
       ]}
       isSticky
