--- a/src/components/common/Image.astro
+++ b/src/components/common/Image.astro
@@ -2,10 +2,10 @@
 import type { HTMLAttributes } from 'astro/types';
 import { findImage } from '~/utils/images';
 import {
-  getImagesOptimized,
   astroAssetsOptimizer,
-  unpicOptimizer,
+  getImagesOptimized,
   isUnpicCompatible,
+  unpicOptimizer,
   type ImageProps,
 } from '~/utils/images-optimization';
 
@@ -40,6 +40,7 @@ if (!props.decoding) {
 const _image = await findImage(props.src);
 
 let image: ImageType | undefined = undefined;
+let isUnpicExternal = false;
 
 if (
   typeof _image === 'string' &&
@@ -47,6 +48,7 @@ if (
   isUnpicCompatible(_image)
 ) {
   image = await getImagesOptimized(_image, props, unpicOptimizer);
+  isUnpicExternal = true;
 } else if (_image) {
   image = await getImagesOptimized(_image, props, astroAssetsOptimizer);
 }
@@ -56,6 +58,10 @@ if (
   !image ? (
     <Fragment />
   ) : (
-    <img src={image.src} crossorigin="anonymous" referrerpolicy="no-referrer" {...image.attributes} />
+    <img
+      src={image.src}
+      {...(isUnpicExternal ? { crossorigin: 'anonymous', referrerpolicy: 'no-referrer' } : {})}
+      {...image.attributes}
+    />
   )
 }
