--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,14 +3,15 @@ import '~/assets/styles/tailwind.css';
 
 import { I18N } from 'astrowind:config';
 
-import CommonMeta from '~/components/common/CommonMeta.astro';
-import Favicons from '~/components/Favicons.astro';
-import CustomStyles from '~/components/CustomStyles.astro';
-import ApplyColorMode from '~/components/common/ApplyColorMode.astro';
-import Metadata from '~/components/common/Metadata.astro';
-import SiteVerification from '~/components/common/SiteVerification.astro';
 import Analytics from '~/components/common/Analytics.astro';
+import ApplyColorMode from '~/components/common/ApplyColorMode.astro';
 import BasicScripts from '~/components/common/BasicScripts.astro';
+import CommonMeta from '~/components/common/CommonMeta.astro';
+import Metadata from '~/components/common/Metadata.astro';
+import ScrollToTop from '~/components/common/ScrollToTop.astro';
+import SiteVerification from '~/components/common/SiteVerification.astro';
+import CustomStyles from '~/components/CustomStyles.astro';
+import Favicons from '~/components/Favicons.astro';
 
 // Comment the line below to disable View Transitions
 import { ClientRouter } from 'astro:transitions';
@@ -43,6 +44,7 @@ const { language, textDirection } = I18N;
   <body class="antialiased text-default bg-page tracking-tight">
     <slot />
 
+    <ScrollToTop />
     <BasicScripts />
   </body>
 </html>
